Update ci-tests.yml update when tests are run

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -1,6 +1,8 @@
 name: test-pr
 
 on:
+    push:
+        branches: [ $default-branch ]
     pull_request:
         # Run on pull requests against the main branch
         branches: [main]
