Update ci-tests.yml update with pushes to main?

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -2,7 +2,7 @@ name: test-pr
 
 on:
     push:
-        branches: [ $default-branch ]
+        branches: [main]
     pull_request:
         # Run on pull requests against the main branch
         branches: [main]
